--- a/src/Components/Header/BackgroundVideo.module.css
+++ b/src/Components/Header/BackgroundVideo.module.css
@@ -45,6 +45,8 @@
 .Content h3 {
   font-size: 48px;
   margin-top: 5px;
+  margin-left: 0;
+  margin-right: 0;
   font-family: 'Overpass', sans-serif;
   margin-bottom: 2px;
   z-index: 2;
