--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -18,7 +18,7 @@
 }
 
 .position {
-  font-size: 38px;
+  font-size: 48px;
   margin-top: 10px;
   font-family: 'Overpass', sans-serif;
   margin-bottom: 10px;
